css/header.css
/*  
 *  Formatting Information for the custom page header
 */ 

h1 {
    margin: 0;
    text-align: center;
    font-size: 52px;
}

header.main-header {
	background: #618685;
	margin: 15px;
	margin-bottom: 25px;
	border-top-left-radius: 68px;
	border-bottom-left-radius: 25px;
}

div.title {
	padding-top: 15px;
	padding-left: 150px;
}

h1.title {
	margin-bottom: 15px;
	font-family: helvetica;
    font-size: clamp(40px, 8vw, 100px);
    color: #181818;
	height: 125px;
}

div.sub_title {
	background: #181818;
	margin: 0;
	margin-left: -125px;
	margin-right: auto;
	border-radius: 0px 0px 15px 15px;
	border: 15px;
	float: left;

	min-height: 25px;
}

div.sub_title > p {
	margin: 5px;
	margin-right: 10px;
	margin-left:10px;
	font-family: helvetica;
	text-align: left;
	font-size: clamp(10px, 2vw, 30px);
	color: #36486b
}

/*Path formatting*/
div#path * {
	font-size: 20px;
	margin-left: 5px;
	margin-right: 5px;
}

div#path {
	margin-top: 0;
	margin-right: 0px;
	min-height: 25px;
	font-weight: bolder;

	background-color: cornflowerblue;

	display: flex;
}

div#path a {
	font-weight: bold;
	text-decoration: inherit;
	color: inherit;

	flex: 0 1 auto;

	display:block;

	white-space: nowrap;

	overflow: hidden;
	text-overflow: ".";
}
	
div#path a:hover {
	text-decoration: underline;
}

/* Profile pic formatting */
img.profile {
	object-fit:cover;
	width: 125px;
	height: 125px;
	border-radius: 70px;
}

/* This is the formatting used for the website link icons */
img.profile-link {
	width: 50px;
	height: 50px;
	filter: drop-shadow(0px 0px 1px black);

	transition-duration: 15ms;
}

img.profile-link:hover {
	filter: drop-shadow(0px 0px 5px black);
}

div.header_bounds {
	float: left;
	margin-top: -10px;
	width: 125px;
	position: relative;
	z-index: 100
}

 /*Base properties of the box containing the profile pic*/
div.profile_box {
	float: left;
	height: 125px;
	width: 125px;
	border-radius: 70px;
	border-style: solid;
	border-width: 8px;
	background: gray;

	margin: 10px;
	margin-left: 0px;

	/*Animates the expansions over 100ms*/
	transition: width 100ms ease-in-out;
 }

 /* Functional */
 
/*Hide the div used to store the links*/
div.profile_box > .link-table {
	visibility: hidden;
	opacity: 0;

	display: flex;
	flex-wrap: wrap;

	float: right;
	margin-right: 5px;
	width: 250px;

	max-width: 100%;

	/*Animates the opacity over 200ms*/
	transition: opacity 200ms;
 }

 div.profile_box > .link-table div {
	display: flex;
	flex: 0 0 auto;
	margin: 5px;
 }
 
 /*On hover, expand the profile box to fit the table*/
 div.profile_box:focus,
 div.profile_box:hover {
     width: 380px;
 }
 
 /*On hover, make the table visible & animate in opacity */
 div.profile_box:focus > .link-table,
 div.profile_box:hover > .link-table {
     transition-delay: 100ms;
     visibility: visible;
     opacity: 1;
     
 }

/*------------------------*/
/*----- Mobile Formatting */
/*------------------------*/


/* By default hide the mobile elements */
div.format_mobile {
	display: none;
}

/* Fix for mobile devices that cannot hover */
@media (hover: none) {
	a.profile-pic-link {
		pointer-events: none;
	}

	a.title {
		pointer-events: all;
	}
}

